# torchsense

./: .gitignore  LICENSE  README.md  pyproject.toml  set_up.py
ai_sense/models/: mobilenetv1.py  mobilenetv2.py
examples/: data_module4.py  run.py  train_fabric.py
examples/data2/1/: test2.mat
models/: Autoencode.py  LSTM.py  alexnet.py  mobilenet.py  mobilenetv3.py  mralex.py  nasnet.py  resalex.py  resalex2.py  resnext.py  senet.py  simple_vit_1d.py  squeezenet.py  test.py  unet.py  vgg.py
models/DeepLabV3/: deeplabv3p.py
models/DeepLabV3/backbone/: __init__.py  mobilenet.py
senseport/models/: deeplab.py  resnet.py
tests/: test_model.py
torchsense/: __init__.py
torchsense/datasets/: __init__.py  custom.py  custom_folder.py  dataset2.py  folder.py  utils.py  vision.py
torchsense/metrics/: __init__.py  kd_losses.py  losses.py  mape.py  triplet.py  weight_loss.py
torchsense/metrics/functional/: __init__.py  sisnr.py
torchsense/models/: __init__.py  cct.py  cnn4.py  conv_tasnet.py  conv_tasnet_lite2.py  fsrcnn.py  gan_g.py  gan_g2.py  gpt_srgan.py  network_rrdbnet.py  resnet.py  rnn.py  rrdb_cbam.py  unet.py  unet_lstm.py  utils.py  vit.py
torchsense/models/lit_model/: __init__.py  lit_classify.py  lit_multimodal.py  lit_regression.py  lit_twostage.py  litmodel.py  litregressmodel.py
torchsense/trainer/: __init__.py  trainer.py
torchsense/trainer/lit_model/: __init__.py  lit_classify.py  lit_kd.py  lit_multimodal.py  lit_regression.py  utils.py
torchsense/transforms/: __init__.py  compose.py
torchsense/transforms/augmentations/: __init__.py  add_random_noise.py  addnoise.py  downsample.py  griffinlim.py  highpass_biquad.py  interpolate.py  normalize.py  premodule.py  random_choice.py  to_tensor.py  utils.py
torchsense/utils/: __init__.py  get_audiostamps.py  get_model.py  load_from_ckpt.py  slide_window.py
(+11 files in other folders)
